# BASpark-Wayland

./: .gitattributes  .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  setup.iss
.github/ISSUE_TEMPLATE/: en_bug_report.yml  en_feature_request.yml  en_question.yml
.github/workflows/: pr-build-check.yml  publish.yml
docs/: README_zh.md
pages/: about.md  guide.md  index.md
pages/.vitepress/: config.mts
scripts/: gen_resx.py
src/: App.xaml.cs  AppLogger.cs  BASpark.csproj  ConfigManager.cs  ControlPanelWindow.xaml  ControlPanelWindow.xaml.cs  LanguageSelectWindow.xaml  LanguageSelectWindow.xaml.cs  Localization.cs  MainWindow.xaml.cs  OverlayManager.cs  PrivacyWindow.xaml  PrivacyWindow.xaml.cs  SidebarBackgroundHelper.cs  TelemetryHelper.cs  UiLocalizer.cs  app.manifest  app.rs  autostart.rs  config.rs  input.rs  main.rs  overlay.rs
src/Resources/: Strings.en.resx  Strings.ja.resx  Strings.resx
src/Web/: index.html
src/input/: cursor.rs  evdev.rs  mod.rs
src/output/: mod.rs  wayland.rs
src/renderer/: dirty_rect.rs  mod.rs  pool.rs  spark.rs  trail.rs  wave.rs
