[package]
name = "baspark"
version = "1.7.0"
edition = "2021"
description = "Blue Archive style particle effects for Linux/Wayland"
license = "MIT"

[[bin]]
name = "baspark"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
directories = "6"
tiny-skia = "0.12"
wayland-client = "0.31"
wayland-protocols = "0.32"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
log = "0.4"
env_logger = "0.11"
toml = "0.8"
signal-hook = "0.3"
nix = { version = "0.31", features = ["signal"] }
memmap2 = "0.9"
tempfile = "3"
rand = "0.9"
evdev = "0.13"
libc = "0.2"
